<resources>
    <string name="app_name">FirstBlood</string>
    <!-- Login Activity-->
    <string name="login_tag">Silahkan masuk dengan akun anda</string>
    <string name="user_h">Username atau Password</string>
    <string name="pass_h">Password</string>
    <string name="login_h">Masuk</string>
    <string name="not_reg">Belum mendaftar?  </string>
    <string name="reg_here">Daftar disini</string>

    <!--Register Activity-->
    <string name="reg_tag">Lakukan registrasi terlebih dahulu</string>
    <string name="name_h">Nama</string>
    <string name="username_h">Username</string>
    <string name="mail_h">E-Mail</string>
    <string name="pass_conf_h">Ulangi Kata Sandi</string>
    <string name="hp_h">No Handphone</string>
    <string name="reg_btn">Daftar Akun</string>


    <!--Detail Activity-->
    <string name="aksi_edit">Edit Post</string>
    <string name="aksi_detail_user">Detail User</string>
    <string name="aksi_donor">Donor !</string>
    <string name="aksi_tutup">Tutup Donor</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MENGERTI</string>

    <string name="slide_1_title">71%</string>
    <string name="slide_1_desc">Kebutuhan darah di Indonesia tidak terpenuhi</string>

    <string name="slide_2_title">5,1 Juta per tahun</string>
    <string name="slide_2_desc">Jumlah kebutuhan minimal darah di Indonesia</string>

    <string name="slide_3_title">3 dari 10</string>
    <string name="slide_3_desc">Ibu ibu yang melahirkan meninggal akibat pendarahan</string>

    <string name="slide_4_title">Gabung dengan kami!</string>
    <string name="slide_4_desc">Saling membantu untuk kemanusiaan</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <!---->

    <string name="belum_punya_akun">Belum mendaftar ?</string>
    <string name="daftar">Daftar di sini.</string>

    <string name="loading">Sedang Memproses..</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_golongan_darah">GOLONGAN DARAH</string>
    <string name="label_rhesus">RHESUS</string>
    <string name="label_deskripsi">DESKRIPSI</string>
    <string name="label_rumah_sakit">RUMAH SAKIT</string>
    <string name="label_verifikasi">Verifikasi</string>
    <string name="label_verify">Verifikasi Akun Anda</string>
    <string name="label_done">Kami telah mengirimkan kode verifikasi ke nomor anda.</string>
    <string name="label_nohp">{{Nomor HP}}</string>
    <string name="label_nama">NAMA</string>
    <string name="label_e_mail">E-MAIL</string>
    <string name="label_no_handphone">NO HANDPHONE</string>

    <string name="desc_icon_donor">icon donor</string>
    <string name="desc_share_icon">share icon</string>


    <string name="bt_donor">Donor</string>
    <string name="bt_share">Share</string>
    <string name="bt_donor_darah">DONOR DARAH</string>
    <string name="bt_cari_donor">CARI DONOR</string>
    <string name="bt_logout">Logout</string>

    <string name="status_0">Menunggu</string>
    <string name="status_1">Selesai</string>

    <string name="appbar_profil">Profil</string>
    <string name="appbar_linimasa">Linimasa</string>

    <string name="bt_kirim_permintaan">KIRIM PERMINTAAN</string>
    <string name="desc_profile_picture">Profile Picture</string>

    <string name="bcd2">A+</string>
    <string name="bcd1">Dibutuhkan segera, golongan darah A+ saat ini juga untuk Sdr. Fathi Abdat, yang sakit kompilasi (jantung, paru-paru, ginjal, diabetes).</string>
    <string name="bcd3">Status</string>
    <string name="bcd4">22/11/2017</string>
    <string name="bcd6">malam saya ibu dari muhammad mutsaqofucl fikri penderita anemia aplastik membutuhkan darah golongan darah B yg sedang di rawat di rsup fatmawati jakarta , mohon bantuannya untuk segenap handaitaulan</string>
    <string name="bcd7">B-</string>
    <string name="bcd5">Permisi. Mohon bantuannya untuk yang bersedia mendonorkan darah O+.paman dari keluarga saya sedang kritis dan membutuhkan darah O+ malam ini untuk teman-teman dan om,tante, semua yg bersdia untuk mendonorkan darah nya bisa untuk menghubungi saya</string>
    <string name="bcd9">O+</string>
    <string name="zero">0</string>
    <string name="dummy_date">22 November 2017</string>
    <string name="setting">Settings</string>
    <string name="frag_linimasa">LINIMASA</string>
    <string name="frag_beranda">BERANDA</string>
    <string name="frag_profil">PROFIL</string>
    <string name="more">More</string>


</resources>
