<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="id.noidea.firstblood.activity.HomeActivity"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?android:attr/colorPrimary"
            app:titleTextColor="@color/colorAccent">
            <ImageView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo_horizontal"
                android:contentDescription="@string/app_name" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBody">
        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            />
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:padding="15dp">
            <Button
                android:id="@+id/donate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bt_donor_darah"
                android:textColor="@color/colorAccent"
                android:layout_weight="0.45"
                android:background="@drawable/capsule_home"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>
            <Button
                android:id="@+id/request_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bt_cari_donor"
                android:textColor="@color/colorAccent"
                android:layout_weight="0.45"
                android:background="@drawable/capsule_home"
                android:textSize="15sp"/>
        </LinearLayout>
    </RelativeLayout>



</LinearLayout>
