<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.noidea.firstblood.activity.NotifActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_square">
            <LinearLayout
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">
                <ImageView
                    android:id="@+id/picture"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/user"
                    android:contentDescription="@string/desc_profile_picture" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bcd1"/>
                    <RelativeLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:background="@drawable/capsule_button"
                            android:id="@+id/tv_goldar"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:layout_marginEnd="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/bcd2"/>
                        <TextView
                            android:id="@+id/status"
                            android:background="@drawable/capsule_button"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:layout_toEndOf="@+id/tv_goldar"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_height="wrap_content"
                            android:text="@string/bcd3"
                            tools:ignore="RelativeOverlap" />
                        <TextView
                            android:id="@+id/date"
                            android:layout_alignParentEnd="true"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_height="wrap_content"
                            android:text="@string/bcd4"
                            tools:ignore="RelativeOverlap" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_square">
            <LinearLayout
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">
                <ImageView
                    android:id="@+id/picture2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/user"
                    android:contentDescription="@string/desc_profile_picture" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/desc2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bcd6"/>
                    <RelativeLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:background="@drawable/capsule_button"
                            android:id="@+id/blood2"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:layout_marginEnd="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/bcd7"/>
                        <TextView
                            android:id="@+id/status2"
                            android:background="@drawable/capsule_button"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:layout_toEndOf="@+id/blood2"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_height="wrap_content"
                            android:text="@string/bcd3"/>
                        <TextView
                            android:id="@+id/date2"
                            android:layout_alignParentEnd="true"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_height="wrap_content"
                            android:text="@string/bcd4"
                            tools:ignore="RelativeOverlap" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_square">
            <LinearLayout
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">
                <ImageView
                    android:id="@+id/picture3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/user"
                    android:contentDescription="@string/desc_profile_picture" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/desc3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bcd5"/>
                    <RelativeLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:background="@drawable/capsule_button"
                            android:id="@+id/blood3"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:layout_marginEnd="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/bcd9"/>
                        <TextView
                            android:id="@+id/status3"
                            android:background="@drawable/capsule_button"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:layout_toEndOf="@+id/blood3"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_height="wrap_content"
                            android:text="@string/bcd3"/>
                        <TextView
                            android:id="@+id/date3"
                            android:layout_alignParentEnd="true"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_height="wrap_content"
                            android:text="@string/bcd4"
                            tools:ignore="RelativeOverlap" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>
