<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.noidea.firstblood.activity.VerifyActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:theme="@style/AppTheme">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?android:attr/colorPrimary"
                app:titleTextColor="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_verifikasi"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/appBarLayout"
            android:paddingBottom="16dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appBarLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="37dp"
                android:text="@string/label_verify"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/label_done"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/noHp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:text="@string/label_nohp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noHp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:weightSum="5"
                android:orientation="horizontal"
                android:id="@+id/linearLayout">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="4"
                    android:inputType="number"
                    android:textSize="28sp"
                    android:hint="@string/zero"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="4"
                    android:inputType="number"
                    android:textSize="28sp"
                    android:hint="@string/zero"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="4"
                    android:inputType="number"
                    android:textSize="28sp"
                    android:hint="@string/zero"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="4"
                    android:inputType="number"
                    android:textSize="28sp"
                    android:hint="@string/zero"
                    android:textAlignment="center"/>
            </LinearLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/capsule_button"
                android:text="@string/label_verifikasi"
                android:textColor="@color/colorAccent"
                android:onClick="verified"/>

        </RelativeLayout>
</RelativeLayout>
